// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordian Component The component only opens the last section when multiple sections have been clicked. 1`] = `
<ul
  className="container"
>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Thing 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Thing 2
    </button>
    <p>
      This should appear and the others go away.
    </p>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Thing 3
    </button>
  </li>
</ul>
`;

exports[`Accordian Component The component opens a clicked section. 1`] = `
<ul
  className="container"
>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Thing 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Thing 2
    </button>
    <p>
      This should appear and the others go away.
    </p>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Thing 3
    </button>
  </li>
</ul>
`;

exports[`Accordian Component The component renders no sections as active by default. 1`] = `
<ul
  className="container"
>
  <li>
    <button
      onClick={[Function]}
    >
      Thing 1
    </button>
  </li>
</ul>
`;

exports[`Accordian Component renders empty li 1`] = `
<ul
  className="container"
>
  <li>
    <button
      onClick={[Function]}
    >
      Thing 1
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
      Thing 2
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
      Thing 3
    </button>
  </li>
</ul>
`;
